# RenderSys

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt
example/2D/1.FirstTriangle/: CMakeLists.txt  main.cpp
example/2D/2.VertexBuffers/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
example/2D/3.VertexAttributes/: CMakeLists.txt  main.cpp
example/2D/4.IndexBuffers/: CMakeLists.txt  main.cpp
example/2D/5.UniformBuffers/: CMakeLists.txt  main.cpp
example/2D/6.DynamicUniforms/: CMakeLists.txt  main.cpp
example/2D/7.Fluid2D/: FluidSolver2D.cpp  FluidSolver2D.h  main.cpp
example/3D/Advanced/1.RayMarching/: CMakeLists.txt  main.cpp
example/3D/Advanced/2.GLTFModel/: CMakeLists.txt  combined.wgsl  fragment.glsl  main.cpp  vertex.glsl
example/3D/Advanced/2.Obj/: untitled.mtl
example/3D/Advanced/3.FirstAnimation/: AnimMain.cpp  CMakeLists.txt  anim-fragment.glsl
example/3D/Advanced/4.ShadowMapping/: CMakeLists.txt  ShadowHelper.h  ShadowMain-frag.glsl  ShadowMain-vert.glsl  ShadowMain.cpp  shadow-combined.wgsl  shadow-frag.glsl  shadow-fragment.glsl  shadow-vert.glsl
example/3D/Basic/1.First3DShape/: CMakeLists.txt  main.cpp  model.txt
example/3D/Basic/2.TransformationMatrices/: CMakeLists.txt  main.cpp
example/3D/Basic/3.BasicShading/: CMakeLists.txt  main.cpp
example/3D/Basic/4.FirstTexture/: CMakeLists.txt  main.cpp
example/3D/Basic/5.TextureSampler/: CMakeLists.txt  main.cpp
example/3D/Basic/6.TextureLoader/: CMakeLists.txt  main.cpp
example/3D/Basic/7.CameraControls/: CMakeLists.txt  main.cpp
example/3D/Basic/8.Lighting/: CMakeLists.txt  main.cpp
example/3D/Basic/9.NormalMapping/: CMakeLists.txt  main.cpp
example/3D/Volumetric/1.Fluid3D/: main.cpp
example/Compute/1.BasicCompute/: CMakeLists.txt  main.cpp
example/Compute/2.Noise/: CMakeLists.txt  main.cpp
example/Compute/3.Fluid2D/: CMakeLists.txt  FluidSolver2D.h  Utils.h  main.cpp
example/Compute/4.Fluid3D/: CMakeLists.txt  main.cpp
example/Resources/Shaders/: ShaderResource.h  metallic-roughness.glsl  shadermaterial.glsl
src/: Camera.h  Compute.cpp  Compute.h  Geometry.h  RenderUtil.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  WebGPUCompute.h  WebGPURenderer3D.h
src/RenderSys/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Compute.cpp  Compute.h  Geometry.cpp  Geometry.h  InstanceBuffer.cpp  InstanceBuffer.h  Material.cpp  Material.h  MaterialFeatures.h  RenderUtil.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureSampler.h
src/RenderSys/Camera/: EditorCameraController.cpp  EditorCameraController.h  ICamera.h  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/RenderSys/Common/: CMakeLists.txt
src/RenderSys/Components/: CameraComponents.h  EntityRegistry.cpp  EntityRegistry.h  LightComponents.h  MeshComponent.cpp  MeshComponent.h  TagAndIDComponents.cpp  TagAndIDComponents.h  TransformComponent.cpp  TransformComponent.h
src/RenderSys/Scene/: Animation.cpp  Animation.h  GLTFModel.cpp  GLTFModel.h  GLTFScene.cpp  GLTFScene.h  GltfModel.cpp  GltfModel.h  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneNode.cpp  SceneNode.h  Skeleton.cpp  Skeleton.h  UUID.cpp  UUID.h
src/RenderSys/Vulkan/: Shader.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCompute.cpp  VulkanCompute.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMemAlloc.cpp  VulkanMemAlloc.h  VulkanPbrRenderPipeline.cpp  VulkanPbrRenderPipeline.h  VulkanRenderer2D.cpp  VulkanRenderer2D.h  VulkanRenderer3D.cpp  VulkanRenderer3D.h  VulkanRendererUtils.cpp  VulkanRendererUtils.h  VulkanResource.cpp  VulkanResource.h  VulkanShadowMap.cpp  VulkanShadowMap.h  VulkanShadowRenderPipeline.cpp  VulkanShapes.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertex.h
src/RenderSys/Vulkan/Pipeline/: VulkanPbrRenderPipeline.cpp  VulkanPbrRenderPipeline.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanShadowRenderPipeline.cpp  VulkanShadowRenderPipeline.h
src/RenderSys/WebGPU/: WebGPUBuffer.cpp  WebGPUBuffer.h  WebGPUCompute.cpp  WebGPUCompute.h  WebGPUMaterial.h  WebGPURenderer2D.cpp  WebGPURenderer2D.h  WebGPURenderer3D.cpp  WebGPURenderer3D.h  WebGPURendererUtils.h  WebGPUResource.h  WebGPUTexture.cpp  WebGPUTexture.h
src/Vulkan/: VulkanRenderer2D.cpp  VulkanRenderer2D.h  VulkanRenderer3D.cpp  VulkanRenderer3D.h
src/WebGPU/: WebGPUCompute.cpp  WebGPUCompute.h  WebGPURenderer2D.cpp  WebGPURenderer2D.h  WebGPURenderer3D.cpp  WebGPURenderer3D.h  WebGPURendererUtils.h
src/resources/Models/: Woman.gltf
